src/externals/lgpl/neodatis/dot-net/src/test/bad/Neodatis/Odb/Test/VO/Inheritance/Player.cs
namespace NeoDatis.Odb.Test.VO.Inheritance
{
	public class Player
	{
		private string name;
	}
}
